--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
                         <span>Email</span>
                     </div>
                     <p class="font-sm mb-2">
-                        <a href="mailto:support@thenazrana.com" class="text-decoration-none">
-                            support@thenazrana.com
+                        <a href="mailto:support@thenazrana.in" class="text-decoration-none">
+                            support@thenazrana.in
                         </a>
                     </p>
                     <div class="d-flex font-sm text-white mb-2 align-items-center">
@@ -76,7 +76,7 @@
                    </div>
                    <div class="fxt-social fxt-social-layout6">
                     <ul class="fxt-social-items fxt-items-light m-0">
-                        <li class="fxt-facebook fxt-zoomIn fxt-transition-delay-12"><a href="https://affixtheme.com/html/flafy/flafy/index6.html#" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
+                        <li class="fxt-facebook fxt-zoomIn fxt-transition-delay-12"><a target="_blank" href="https://www.facebook.com/Thenazranain-103404152094622" title="Facebook"><i class="fab fa-facebook-f"></i></a></li>
                         <li class="fxt-twitter fxt-zoomIn fxt-transition-delay-13"><a href="#" title="twitter"><i class="fab fa-twitter"></i></a>
                         </li>
                         <li class="fxt-instagram fxt-zoomIn fxt-transition-delay-15"><a href="#" title="instagram"><i class="fab fa-instagram"></i></a></li>
